4.0-rc2
 * Fix race in fat client removal (CASSANDRA-16238)
 * Test org.apache.cassandra.net.AsyncPromiseTest FAILED (CASSANDRA-16596)
Merged from 3.11:
 * Nodetool garbagecollect should retain SSTableLevel for LCS (CASSANDRA-16634)
 * Ignore stale acks received in the shadow round (CASSANDRA-16588)
Merged from 3.0:
 * Fix materialized view builders inserting truncated data (CASSANDRA-16567)

4.0-rc1
 * Allow for setting buffer max capacity to increase it dynamically as needed (CASSANDRA-16524)
 * Harden internode message resource limit accounting against serialization failures (CASSANDRA-16616)
 * Add back the source release of python driver in tree to avoid fetching from GitHub APIs (CASSANDRA-16599)
 * Fix false unavailable for queries due to cluster topology changes (CASSANDRA-16545)
 * Fixed a race condition issue in nodetool repair where we poll for the error before seeing the error notification, leading to a less meaningful message (CASSANDRA-16585)
 * Fix mixed cluster GROUP BY queries (CASSANDRA-16582)
 * Upgrade jflex to 1.8.2 (CASSANDRA-16576)
 * Binary releases no longer bundle the apidocs (javadoc) (CASSANDRA-15561)
 * Fix Streaming Repair metrics (CASSANDRA-16190)
 * Scheduled (delayed) schema pull tasks should not run after MIGRATION stage shutdown during decommission (CASSANDRA-16495)
 * When behind a firewall trunk is not buildable, need to allow overriding URLs (CASSANDRA-16563)
 * Make sure sstables with moved starts are removed correctly in LeveledGenerations (CASSANDRA-16552)
 * Fix race between secondary index building and active compactions tracking (CASSANDRA-16554)
 * Migrate dependency handling from maven-ant-tasks to resolver-ant-tasks, removing lib/ directory from version control (CASSANDRA-16391)
 * Fix 4.0 node sending a repair prepare message to a 3.x node breaking the connection (CASSANDRA-16542)
 * Removed synchronized modifier from StreamSession#onChannelClose to prevent deadlocking on flush (CASSANDRA-15892)