@@ -1,4 +1,5 @@
 4.0-rc2
+ * Fix ArrayIndexOutOfBoundsException thrown at compacting the last level using LeveledCompactionStrategy (CASSANDRA-15669)
  * Fix race in fat client removal (CASSANDRA-16238)
  * Test org.apache.cassandra.net.AsyncPromiseTest FAILED (CASSANDRA-16596)
 Merged from 3.11:
